--- a/Module2_DOM/Lec2_Ticket_Management_Clone/activity/style.css
+++ b/Module2_DOM/Lec2_Ticket_Management_Clone/activity/style.css
@@ -78,7 +78,12 @@
   font-size: 1.5rem;
 }
 
-.close-ticket {
+.fa-trash {
+  color: black;
+  margin : 5px;
+}
+
+.close-modal {
   /* height: 100%; */
   /* width: 50%; */
   height: 100%;
@@ -102,7 +107,7 @@
   background: #2c3e50 !important;
 }
 
-.close-ticket:hover {
+.close-modal:hover {
   background: #2c3e50 !important;
 }
 
@@ -160,6 +165,17 @@
 
 .ticket-filter {
   height: 10%;
+}
+
+.ticket-info {
+  display: flex;
+  justify-content: space-between;
+  /* margin: 4px; */
+  /* background: #2ecc71; */
+}
+
+.ticket-delete {
+  cursor: pointer;
 }
 
 .ticket-id {
