--- a/Module2_DOM/Lec5_PepSnap/activity/style.css
+++ b/Module2_DOM/Lec5_PepSnap/activity/style.css
@@ -107,3 +107,21 @@ video {
     font-weight: bold;
     border : 5px solid white;
 } 
+
+@media (max-width:600px){
+  .media-controls {
+      height: 240px;
+      width: 280px;
+      position: absolute;
+      top: 74%;
+      left: 22%;
+      flex-direction: row;
+  }
+  #gallery-btn{
+      top: 90%;
+      left: 80%;
+      height: 45px;
+      width: 45px;
+      border: 2px solid;
+  }
+}
