--- a/Module2_DOM/Lec6_Whiteboard/public/style.css
+++ b/Module2_DOM/Lec6_Whiteboard/public/style.css
@@ -1,50 +1,106 @@
 * {
     box-sizing: border-box;
-    margin : 0px;
+    margin: 0px;
     padding: 0px;
-    overflow: hidden;
 }
-
 .tools-content {
+    /* background: lightcyan; */
     height: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: aqua;
 }
-
-.canvas-content {
-
-}
-
 .tools {
-
+    background: aliceblue;
     height: 80%;
     width: 70%;
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
-    background: bisque;
     border-radius: 10px;
+    align-items: center;
+    /* border: 1px solid lightgray; */
 }
 
 .tool {
-
-    /* height: 90%; */
-    /* width: -moz-available; */
+    height: 80%;
     height: 70%;
     width: 10%;
     position: relative;
 }
 
 .tool img {
-
     height: 100%;
     width: 100%;
-    /* position: absolute; */
     transition: transform 0.5s;
 }
 
 .tool img:hover {
     transform: scale(1.1);
 }
+
+.canvas-content {
+
+}
+
+#canvas {
+    /* background: lightblue; */
+}
+
+.tool-options {
+    height: 100px;
+    width: 110px;
+    /* border: 1px solid lightgray; */
+    border-radius: 10px;
+    position: absolute;
+    top: 45px;
+    left: -30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background: aliceblue;
+}
+
+.pencil-size {
+    text-align: center;
+}
+.eraser-size{
+    text-align: center;
+}
+.eraser-size input {
+    width: 90%;
+}
+
+.pencil-size input {
+    width: 90%;
+}
+
+.pencil-colors {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.pencil-colors div{
+    height: 20px;
+    width: 20px;
+    border-radius: 50px;
+}
+
+.red {
+    background: red;
+}
+
+.yellow {
+    background: yellow;
+}
+
+.blue {
+    background: blue;
+}
+
+.black {
+    background: black;
+}
+
+.hide{
+    display: none;
+} 
